# cachefs

./: BUILD_VERIFICATION.md  CACHEFS_REQUIREMENTS.md  CACHE_IMPLEMENTATION_SUMMARY.md  Makefile.am  README.md  RENAMING_SUMMARY.md  TEST_RESULTS.md  configure.ac  test_quick.sh
.github/: copilot-instructions.md
Formula/: cachefs.rb
packaging/: make_bottle.sh  make_deb.sh  make_pkg.sh
src/: Makefile.am  arena.h  cache_block.c  cache_block.h  cache_coherency.c  cache_coherency.h  cache_meta.c  cache_meta.h  cache_meta_lmdb.c  cachefs.1  cachefs.c  debug.h  misc.h  permchain.c  permchain.h  rate_limiter.h  userinfo.h  usermap.h
tests/: Makefile.am  common.rb  stress_test.rb  test_cachefs.rb
tests/internals/: test_common.h
